# validate_triton_client

./: .gitattributes  LICENSE  README.md
models/MNIST_testModel/: config.pbtxt
models/MNIST_testModel/1/: model.onnx
models/resnet50/: client.py  img1.txt
models/resnet50/1/: model.pt
scripts/: start-tritonserver.sh
src/: CMakeLists.txt  TritonClientTool.hpp  test_resnet50.cxx
